--- a/build.gradle
+++ b/build.gradle
@@ -1,42 +1,34 @@
-buildscript {
-    ext {
-        springBootVersion = '2.0.6.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins {
+    id "org.springframework.boot" version "2.1.7.RELEASE"
+    id "java"
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
+apply plugin: "java"
+apply plugin: "eclipse"
+apply plugin: "org.springframework.boot"
+apply plugin: "io.spring.dependency-management"
 
-group = 'io.honeymon.study'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 10
+group = "io.honeymon.study"
+version = "0.0.1-SNAPSHOT"
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
-
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.springframework.boot:spring-boot-starter-web")
 
-    runtimeOnly('com.h2database:h2')
-    compileOnly('org.projectlombok:lombok')
+    runtimeOnly("com.h2database:h2")
+    compileOnly("org.projectlombok:lombok")
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude module: 'junit'
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude module: "junit"
     }
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
-    testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+    testImplementation("org.junit.jupiter:junit-jupiter-api")
+    testCompile("org.junit.jupiter:junit-jupiter-params")
+    testRuntime("org.junit.jupiter:junit-jupiter-engine")
 }
 
 test {
