--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,9 @@
 plugins {
-    id "org.springframework.boot" version "2.1.7.RELEASE"
     id "java"
+    id "groovy"
+    id "org.springframework.boot" version "2.1.6.RELEASE"
 }
 
-apply plugin: "java"
-apply plugin: "eclipse"
-apply plugin: "org.springframework.boot"
 apply plugin: "io.spring.dependency-management"
 
 group = "io.honeymon.study"
@@ -19,18 +17,24 @@ repositories {
 dependencies {
     implementation("org.springframework.boot:spring-boot-starter-data-jpa")
     implementation("org.springframework.boot:spring-boot-starter-web")
+    implementation("org.codehaus.groovy:groovy")
 
     runtimeOnly("com.h2database:h2")
     compileOnly("org.projectlombok:lombok")
+    annotationProcessor("org.projectlombok:lombok")
+    annotationProcessor("org.springframework.boot:spring-boot-configuration-processor")
 
     testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude module: "junit"
+        exclude module: "junit" // JUnit4 제거, 스프링 부트 2.2.0 부터 JUnit5 적용
     }
     testImplementation("org.junit.jupiter:junit-jupiter-api")
-    testCompile("org.junit.jupiter:junit-jupiter-params")
-    testRuntime("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation("org.junit.jupiter:junit-jupiter-params")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+    testImplementation("org.codehaus.groovy:groovy-test")
+    testImplementation("org.spockframework:spock-core:1.3-groovy-2.5")
+    testImplementation("org.spockframework:spock-spring:1.3-groovy-2.5")
 }
 
 test {
-    useJUnitPlatform()
+    useJUnitPlatform() // JUnit5 실행
 }
