--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,10 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api")
     testImplementation("org.junit.jupiter:junit-jupiter-params")
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
+    testCompileOnly('junit:junit')
+    testRuntimeOnly('org.junit.vintage:junit-vintage-engine') {
+        because 'JUni 3 와 JUnit 4 테스트 실행을 위해 필요핟.'
+    }
     testImplementation("org.codehaus.groovy:groovy-test")
     testImplementation("org.spockframework:spock-core:1.3-groovy-2.5")
     testImplementation("org.spockframework:spock-spring:1.3-groovy-2.5")
